--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "jitbot",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,19 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.6.0",
     "@uniswap/v3-core": "^1.0.0",
+    "abi-decoder": "^2.4.0",
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
-    "truffle": "^5.4.18"
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "mongoose": "^6.0.12",
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1",
+    "truffle": "^5.4.18",
+    "web3": "^1.6.0",
+    "web3-eth-abi": "^1.6.0",
+    "web3-utils": "^1.6.0"
   }
 }
