--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
   },
   "homepage": "https://github.com/BenReilly19/JITbot#readme",
   "dependencies": {
+    "@apollo/client": "^3.4.17",
     "@truffle/hdwallet-provider": "^1.6.0",
     "@uniswap/v3-core": "^1.0.0",
     "abi-decoder": "^2.4.0",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "ethers": "^5.5.1",
     "express": "^4.17.1",
+    "graphql": "^15.7.2",
     "helmet": "^4.6.0",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
+    "react": "^17.0.2",
     "truffle": "^5.4.18",
     "web3": "^1.6.0",
     "web3-eth-abi": "^1.6.0",
